--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel": "^5.8.23",
     "co": "^4.6.0",
+    "coffee-script": "^1.10.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
     "moment": "^2.10.6",
