--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "babel": "^5.8.23",
     "co": "^4.6.0",
     "coffee-script": "^1.10.0",
+    "convert-source-map": "^1.1.1",
     "deepmerge": "^0.2.10",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
     "moment": "^2.10.6",
     "optimist": "^0.6.1",
+    "recast": "^0.10.33",
+    "regenerator": "^0.8.41",
     "webdriverio": "^3.2.5"
   },
   "devDependencies": {},
