--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "co": "^4.6.0",
     "coffee-script": "^1.10.0",
     "convert-source-map": "^1.1.1",
+    "deasync": "^0.1.2",
     "deepmerge": "^0.2.10",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
